--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Sitharaman Deepak Guptha",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "mongodb": "^3.3.4",
     "mongoose": "^5.9.14",
