--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.4",
     "mongoose": "^5.9.14",
+    "multer": "^1.4.2",
     "validator": "^13.0.0"
   },
   "devDependencies": {
