--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.3.4",
     "mongoose": "^5.9.14",
     "multer": "^1.4.2",
+    "sharp": "^0.25.4",
     "validator": "^13.0.0"
   },
   "devDependencies": {
